--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  # IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push-image:
@@ -45,4 +45,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build the Docker image
-        run: docker build ./broker/connect/grpc --file ./upmicro/Dockerfile --tag micro_broker_grpc
+        run: |
+        docker build ./broker/connect/grpc --file ./upmicro/Dockerfile --tag $REGISTRY/luanhailiang/micro_broker_grpc
+        docker push $REGISTRY/luanhailiang/micro_broker_grpc
