--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -46,5 +46,5 @@ jobs:
 
       - name: Build the Docker image
         run: |
-          docker build ./broker/connect/grpc --file ./upmicro/Dockerfile --tag $REGISTRY/luanhailiang/micro_broker_grpc:${{ steps.meta.outputs.tags }}
-          docker push $REGISTRY/luanhailiang/micro_broker_grpc:${{ steps.meta.outputs.tags }}
+          docker build ./broker/connect/grpc --file ./upmicro/Dockerfile --tag $REGISTRY/luanhailiang/micro_broker_grpc
+          docker push $REGISTRY/luanhailiang/micro_broker_grpc
