--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,8 @@
         "compile_on_save": true,
         "options": [
             "--proto_path=${workspaceRoot}/proto",
-            "--go_out=module=github.com/luanhailiang/micro.git:.",
-            "--go-grpc_out=module=github.com/luanhailiang/micro.git:.",
+            "--go_out=module=github.com/luanhailiang/micro:.",
+            "--go-grpc_out=module=github.com/luanhailiang/micro:.",
             "--plugin=protoc-gen-go=${workspaceRoot}/proto/bin/protoc-gen-go",
             "--plugin=protoc-gen-go-grpc=${workspaceRoot}/proto/bin/protoc-gen-go-grpc"
         ]
