--- a/upmicro/docker-compose.yml
+++ b/upmicro/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - 6222:6222 
       - 8222:8222 
   broker_grpc:
-    image: docker.clhero.fun/hero/micro_broker_grpc:master
+    image: ghcr.io/luanhailiang/micro_broker_grpc:latest
     build: 
       context: ../broker/connect/grpc
       dockerfile: ../../../upmicro/Dockerfile
@@ -35,7 +35,7 @@ services:
     ports:
       - 9090:9090 #grpc
   broker_http:
-    image: docker.clhero.fun/hero/micro_broker_http:master
+    image: ghcr.io/luanhailiang/micro_broker_http:latest
     build: 
       context: ../broker/connect/http
       dockerfile: ../../../upmicro/Dockerfile
@@ -47,7 +47,7 @@ services:
     ports:
       - 8080:8080 #http
   broker_tcp:
-    image: docker.clhero.fun/hero/micro_broker_tcp:master
+    image: ghcr.io/luanhailiang/micro_broker_tcp:latest
     build: 
       context: ../broker/connect/tcp
       dockerfile: ../../../upmicro/Dockerfile
@@ -60,15 +60,14 @@ services:
       - 7070:7070 #http
 
   broker_web:
-    image: docker.clhero.fun/hero/micro_broker_web:master
+    image: ghcr.io/luanhailiang/micro_broker_web:latest
     build: 
       context: ../broker/connect/web
       dockerfile: ../../../upmicro/Dockerfile
     environment:
-      - SERVE_NAME=broker
+      - SERVE_NAME=info
       - NATS_URL=nats:4222
-      - JWT_TOKEN_KEY=5656
       - DEBUG_LOG=true
-    ports:
-      - 8888:8080 #http
+      - MONGO_URI=mongodb://mongo:27017/?maxPoolSize=20&w=majority
+      - REDIS_ADDR=redis:6379
   
